--- a/ThreeGlassesGame.cabal
+++ b/ThreeGlassesGame.cabal
@@ -32,7 +32,8 @@ executable ThreeGlassesGame
                       mtl,
                       random,
                       pretty-terminal,
-                      ansi-terminal
+                      ansi-terminal,
+                      unix
     hs-source-dirs:   src
     default-language: Haskell2010
 
